--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "adh_terrassement",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.6",
     "@mui/material": "^5.14.6",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
@@ -38,5 +39,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "main": "index.js",
+  "repository": "https://github.com/imbertf/adh_terrassement.git",
+  "author": "flo <f.imbert4@gmail.com>",
+  "license": "MIT"
 }
